--- a/css/styles.css
+++ b/css/styles.css
@@ -3023,7 +3023,7 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(255, 86, 119, 0.25);
 }
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   pointer-events: none;
@@ -3037,7 +3037,7 @@ textarea.form-control-lg {
 }
 .btn-primary:hover {
   color: #000;
-  background-color: #c77556;
+  background-color: #FF5677;
   border-color: #c46d4c;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
